<resources>
    <string name="app_name">Anonytter</string>
    <string name="sign_up">New User ?  Sign Up for free</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or">--OR--</string>
    <string name="todo">TODO</string>
    <string name="login_using_facebook">LogIn using Facebook :-</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_1">New User</string>
    <string name="item_2">Login</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="logout">LogOut</string>
    <string name="write_a_new_post">Write a new post</string>
    <string name="submit">Submit</string>
    <string name="enter_text_here">Enter body here</string>
    <string name="enter_title_here">Enter title here</string>
</resources>
